Fix Android-compatible G6A sidecar recovery read